Updating site; fixing font size issues

--- a/_site.yml
+++ b/_site.yml
@@ -13,7 +13,7 @@ navbar:
 output_dir: "."
 output:
   html_document:
-    theme: yeti
+    theme: paper
     highlight: textmate
 #    include:
 #      after_body: _footer.html
